--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,8 @@
 FLASK_APP=services/yt-api/project/__init__.py
 FLASK_ENV=development
 FLASK_DEBUG=True
+
+DATABASE_URL=postgresql://hello_flask:hello_flask@db:5432/hello_flask_dev
+SQL_HOST=db
+SQL_PORT=5432
+DATABASE=postgres
