--- a/services/yt-api/Dockerfile
+++ b/services/yt-api/Dockerfile
@@ -12,3 +12,5 @@ COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . /usr/src/app/
+
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
