--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,7 @@ DATABASE_URL=postgresql://hello_flask:hello_flask@db:5432/hello_flask_dev
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_BACKEND=redis://redis:6379/0
+CELERY_TIMEZONE=UTC
